# testing-with-pytest-2

./: 01_Getting_Started_With_Pytest.ipynb  02_Writing_Test_Functions.ipynb  README.md
cards_proj/: pyproject.toml
cards_proj/cards/: api.py
cards_proj/tests/: test_card.py
