[tool.poetry]
name = "cards"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
tinydb = "^4.7.0"
typer = "^0.4.1"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Faker = "^13.12.0"
tox = "^3.25.0"
coverage = "^6.4"
pytest-cov = "^3.0.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
